[package]
name = "iron-cors"
version = "0.8.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
repository = "https://github.com/dbrgn/iron-cors-rs/"
homepage = "https://github.com/dbrgn/iron-cors-rs/"
documentation = "https://docs.rs/iron-cors/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A CORS middleware implementation for Iron."
edition = "2018"

[dependencies]
iron = { git = "https://github.com/static-web-server/iron.git", tag = "v0.7.0-beta" }
log = "0.4"

[dev-dependencies]
iron-test = { git = "https://github.com/static-web-server/iron-test.git", branch = "master" }
unicase = "1.4"
